[package]
name = "amp"
description = "Amphitheatre's official command line tool"
version = "0.8.3"
edition = "2021"
license = "Apache-2.0"
homepage = "https://amphitheatre.app"
documentation = "https://docs.amphitheatre.app/cli/"
repository = "https://github.com/amphitheatre-app/cli"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amp-client = { git = "https://github.com/amphitheatre-app/amp-client-rust", tag = "v0.9.3" }
amp-common = { git = "https://github.com/amphitheatre-app/common", tag = "v0.9.4" }
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive", "env"] }
clap-verbosity-flag = "3.0.1"
clap_complete = "4.5.38"
colored = "2.1.0"
confy = "0.6.1"
ctrlc = "3.4.5"
dunce = "1.0.5"
futures = "0.3.31"
ignore = "0.4.23"
inquire = "0.7.5"
notify = "7.0.0"
once_cell = "1.20.2"
owo-colors = { version = "4.1.0", features = ["supports-colors"] }
reqwest-eventsource = "0.6.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tabled = "0.17.0"
tar = "0.4.43"
thiserror = "2.0.7"
tokio = { version = "1.42.0", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
