[package]
name = "amp"
description = "Amphitheatre's official command line tool"
version = "0.9.1"
edition = "2021"
license = "Apache-2.0"
homepage = "https://amphitheatre.app"
documentation = "https://docs.amphitheatre.app/cli/"
repository = "https://github.com/amphitheatre-app/cli"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amp-client = { git = "https://github.com/amphitheatre-app/amp-client-rust", tag = "v0.10.1" }
amp-common = { git = "https://github.com/amphitheatre-app/common", tag = "v0.10.3" }
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive", "env"] }
clap-verbosity-flag = "3.0.2"
clap_complete = "4.5.48"
colored = "3.0.0"
confy = "0.6.1"
ctrlc = "3.4.6"
dunce = "1.0.5"
futures = "0.3.31"
ignore = "0.4.23"
inquire = "0.7.5"
notify = "8.0.0"
once_cell = "1.21.3"
owo-colors = { version = "4.2.0", features = ["supports-colors"] }
reqwest-eventsource = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tabled = "0.19.0"
tar = "0.4.44"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.21"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
