[package]
name = "amp"
description = "Amphitheatre's official command line tool"
version = "0.9.4"
edition = "2021"
license = "Apache-2.0"
homepage = "https://amphitheatre.app"
documentation = "https://docs.amphitheatre.app/cli/"
repository = "https://github.com/amphitheatre-app/cli"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amp-client = { git = "https://github.com/amphitheatre-app/amp-client-rust", tag = "v0.10.4" }
amp-common = { git = "https://github.com/amphitheatre-app/common", tag = "v0.10.5" }
anyhow = "1"
clap = { version = "4.5", features = ["derive", "env"] }
clap-verbosity-flag = "3"
clap_complete = "4.5"
colored = "3"
confy = "1"
ctrlc = "3"
dunce = "1"
futures = "0.3"
ignore = "0.4"
inquire = "0.7"
notify = "8"
reqwest-eventsource = "0.6"
tabled = "0.20"
tar = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
